# wild-heart

./: .gitignore
client/: .gitignore  index.html  package.json  vite.config.ts
client/src/: App.vue  main.ts  styles.css  types.ts
client/src-tauri/: tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src/components/: BottomBar.vue  Button.vue  Chat.vue  Controls.vue  Expedition.vue  GameLoader.vue  Gear.vue  GlassCover.vue  Hand.vue  Input.vue  Inventory.vue  Item.vue  LevelPlack.vue  Logs.vue  Mob.vue  Modal.vue  PlayerInfo.vue  PlayerResource.vue  ResourceBar.vue  Section.vue  Slot.vue  Timer.vue  Tooltip.vue
client/src/pkg/: api.ts  events.ts  slots.ts  utils.ts
client/src/router/: index.ts
client/src/stores/: auth.ts  chat.ts  echo.ts  expeditions.ts  meta.ts  player-attributes.ts  player-resource.ts  player-state.ts  player-stats.ts  player.ts  slots.ts
client/src/views/: Auth.vue  Home.vue
server/: Cargo.toml
server/src/: main.rs
server/src/auth/: mod.rs
server/src/game_loop/: game_loop.rs
server/src/messages/: incoming.rs  mod.rs
server/src/meta/: base_stats.rs  level_to_exp.rs  mob.rs  mod.rs
server/src/models/: chat_message.rs  expedition.rs  item.rs  item_stats.rs  log.rs  mob.rs  mod.rs  player.rs  player_attributes.rs  player_resource.rs  player_state.rs  player_stats.rs  slot.rs
server/src/server/: auth_routes.rs  message_handler.rs  mod.rs  websocket.rs  websocket_manager.rs
server/src/services/: mod.rs  probability_calculator.rs
server/src/store/: events.rs  mod.rs  persistence.rs
