[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dashmap = "6"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sled = "0.34"
bincode = "1.3"
futures-util = "0.3"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
serde_json = "1.0.143"
erased-serde = "0.4.6"
dotenvy = "0.15"
strum = "0.27.2"
strum_macros = "0.27.2"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"